# tkd_competition_manager

./: .containerignore  .gitignore  Containerfile  README.md  api.py  app.py  init_db.py  migrate_add_event_type.py  migrate_add_poomsae_style.py  migrate_add_position.py  models.py  pyproject.toml  reset_db.py  test_db.py  update_secrets.py  zappa_settings.json
.github/: copilot-instructions.md
docs/: QUICK_REFERENCE.md  USAGE_GUIDE_ADMIN.md  USAGE_GUIDE_RING_TABLE_STAFF.md  USAGE_GUIDE_VOLUNTEERS.md  index.md
instance/: test.db  test_ui.db
scripts/: _bootstrap.py  generate_api_token.py  init_db.py  match_analytics.py  migrate_add_api_token_table.py  migrate_add_event_type.py  migrate_add_match_times.py  migrate_add_poomsae_style.py  migrate_add_position.py  migrate_add_school.py  reset_db.py  seed_dev_db.py  switch_env.sh  update_secrets.py
static/: openapi.yaml
templates/: _bracket_controls.html  _bracket_empty.html  _bracket_generate_success.html  _bracket_ring_assignment.html  _competitor_list_item.html  _competitors_list.html  _confirm_modal.html  _division_list_item.html  _division_name_display.html  _division_name_form.html  _divisions_list.html  _empty_state.html  _error_modal.html  _inline_error.html  _match_schedule_card.html  _public_rings_fragment.html  _ring_list_item.html  _rings_list.html  _scorekeeper_result_oob.html  admin.html  admin_api_tokens.html  admin_schedule.html  bracket_fragment.html  bracket_manage.html  bracket_view.html  braket_fragment.html  division_setup.html  group_results.html  index.html  login.html  poomsae_results.html  (+10 more)
(+7 files in other folders)
