[project]
name = "tkd-competition-manager"
version = "0.1.0"
description = "Simple Flask-based Competition Manager for TKD Tournaments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "zappa>=0.61.4",
]
