[project]
name = "tkd-competition-manager"
version = "0.1.0"
description = "Simple Flask-based Competition Manager for TKD Tournaments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "flask-wtf>=1.2.2",
    "supabase>=2.28.0",
    "zappa>=0.61.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
